Refactoring: Fix Sonar issues, flatten services interfaces and implementations